# ghtp

./: pyproject.toml
ghtp/: image.py  main.py
scripts/: gettemplates.fish  syncrepos.fish
